--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "graphql": "^15.5.0",
     "nanoid": "^3.1.22",
     "pg": "^8.5.1",
-    "valid-url": "^1.0.9"
-  },
-  "devDependencies": {
+    "valid-url": "^1.0.9",
     "nodemon": "^2.0.7"
   },
+  "devDependencies": {},
   "engines": {
     "node": "12.15.0"
   }
