--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "url_shortener",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon server.js",
+    "test": "mocha test/*.test.js"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -12,11 +13,15 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "nanoid": "^3.1.22",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "valid-url": "^1.0.9",
-    "nodemon": "^2.0.7"
+    "valid-url": "^1.0.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "supertest": "^6.1.3"
+  },
   "engines": {
     "node": "12.15.0"
   }
