--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "make-runnable": "^1.3.8",
     "nanoid": "^3.1.22",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
